[package]
name = "etopa"
version = "0.0.0"
authors = ["Lennart Heinrich <lennart@ltheinrich.de>"]
edition = "2021"
license = "ISC"
repository = "https://ltheinrich.de/etopa"
description = "Time-based one-time password authenticator"
homepage = "https://etopa.de"

[dependencies]
kern = "1.6.4"
aes-gcm = "0.10.3"
ring = "0.17.7"
sha3 = "0.10.8"
hex = "0.4.3"
rust-argon2 = "2.1.0"
base32 = "0.4.0"
rand = "0.8.5"
