[package]
name = "etopai"
version = "0.0.0"
authors = ["Lennart Heinrich <lennart@ltheinrich.de>"]
edition = "2021"
rust-version = "1.56"
license = "ISC"
repository = "https://ltheinrich.de/etopa"
description = "Etopa HTTPS API"
homepage = "https://etopa.de"

[dependencies]
etopa = { path = "../etopa" }
kern = { version = "1.6.1", features = ["http"] }
json = "0.12.4"
