[package]
name = "etopai"
version = "0.0.0"
authors = ["Lennart Heinrich <lennart@ltheinrich.de>"]
edition = "2021"
license = "ISC"
repository = "https://ltheinrich.de/etopa"
description = "Etopa HTTPS API"
homepage = "https://etopa.de"

[dependencies]
etopa = { path = "../etopa" }
kern = { version = "1.7.0", features = ["tls"] }
json = "0.12.4"
