[package]
name = "etopan"
version = "0.0.0"
authors = ["Lennart Heinrich <lennart@ltheinrich.de>"]
edition = "2021"
license = "ISC"
repository = "https://ltheinrich.de/etopa"
description = "Etopa for Android"
homepage = "https://etopa.de"

[dependencies]
etopa = { path = "../etopa" }
jni = { version = "0.19.0", default-features = false }

[lib]
name = "etopan"
crate-type = ["cdylib"]
