[package]
name = "etopan"
version = "0.0.0"
authors = ["Lennart Heinrich <lennart@ltheinrich.de>"]
edition = "2021"
rust-version = "1.56"
license = "ISC"
repository = "https://ltheinrich.de/etopa"
description = "Etopa for Android"
homepage = "https://etopa.de"

[dependencies]
etopa = { path = "../etopa" }
jni = { version = "0.20.0", default-features = false }

[lib]
name = "etopan"
crate-type = ["cdylib"]
