[package]
name = "etopaw"
version = "0.0.0"
authors = ["Lennart Heinrich <lennart@ltheinrich.de>"]
edition = "2021"
rust-version = "1.56"
license = "ISC"
repository = "https://ltheinrich.de/etopa"
description = "Etopa for Web"
homepage = "https://etopa.de"

[dependencies]
etopa = { path = "../etopa" }
console_error_panic_hook = "0.1.7"
serde = "1.0.177"
serde_derive = "1.0.177"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
getrandom = { version = "0.2.10", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false #["-Oz", "--enable-mutable-globals"]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
