[package]
name = "etopaw"
version = "0.0.0"
authors = ["Lennart Heinrich <lennart@ltheinrich.de>"]
edition = "2021"
license = "ISC"
repository = "https://ltheinrich.de/etopa"
description = "Etopa for Web"
homepage = "https://etopa.de"

[dependencies]
etopa = { path = "../etopa" }
console_error_panic_hook = "0.1.7"
serde = "1.0.214"
serde_derive = "1.0.214"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.95", features = ["serde-serialize"] }
getrandom = { version = "0.2.15", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false #["-Oz", "--enable-mutable-globals"]

[dev-dependencies]
wasm-bindgen-test = "0.3.45"
