[package]
name = "etopaw"
version = "0.0.0"
authors = ["Lennart Heinrich <lennart@ltheinrich.de>"]
edition = "2024"
license = "ISC"
repository = "https://ltheinrich.de/etopa"
description = "Etopa for Web"
homepage = "https://etopa.de"

[dependencies]
etopa = { path = "../etopa" }
console_error_panic_hook = "0.1.7"
serde = "1.0.224"
serde_derive = "1.0.224"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.101", features = ["serde-serialize"] }
getrandom_02 = { package = "getrandom", version = "0.2.16", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3.3", features = [
    "wasm_js",
] }

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false #["-Oz", "--enable-mutable-globals"]

[dev-dependencies]
wasm-bindgen-test = "0.3.51"
